--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.3",
+    "vite": "^4.0.3"
+  },
+  "peerDependencies": {
     "vite-plugin-electron": "^0.9.2"
   },
   "engines": {
